--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,8 @@ build_script:
     - ps: >-
         bash -c @"
           set -e
+          set
+          echo `$APPVEYOR_BUILD_VERSION
           # stdin seems to be invalid on appveyor, so set it to null
           exec 0</dev/null 2>&1
           export
@@ -51,9 +53,7 @@ build_script:
           sed -i -e 's/Qt/projects/g' qlcplusQt5.nsi
           makensis -X'SetCompressor /FINAL lzma' qlcplusQt5.nsi
           #set CURRDATE=`date +%Y%m%d`
-          set
-          echo \"$APPVEYOR_BUILD_VERSION\"
-          mv QLC+_4.10.5.exe /c/projects/qlcplus/QLC+_\"$APPVEYOR_BUILD_VERSION\".exe
+          mv QLC+_4.10.5.exe /c/projects/qlcplus/QLC+_`$APPVEYOR_BUILD_VERSION.exe
           ls /c/projects/qlcplus/*.exe
           exit 0
         "@
