--- a/platforms/linux/qlcplus-fixtureeditor.desktop
+++ b/platforms/linux/qlcplus-fixtureeditor.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=QLC+ Fixture Editor
+Name[fr]=Éditeur d'appareil QLC+
 GenericName=Edit fixtures
 GenericName[cz]=Editor definicí zařízení
 GenericName[de]=Gerätedefinitionen bearbeiten
