--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: cpp
 
 script:
  - "bash -ex .travis-ci.sh"
-
-after_success: "coveralls"
  
 matrix:
   fast_finish: true
@@ -15,6 +13,8 @@ matrix:
       env: TASK='compile' QT='qt4'
     - compiler: gcc
       env: TASK='compile' QT='qt5'
+    - compiler: gcc
+      env: TASK='coverage' QT='qt5'
 
 cache: apt
 
@@ -27,6 +27,7 @@ before_install:
  # Install the relevant bits depending on which version of Qt, export a QMAKE variable with the qmake binary in it.
  - if [ "$QT" = "qt4" ]; then sudo apt-get install -qq libqt4-dev; export QMAKE=qmake; fi
  - if [ "$QT" = "qt5" ]; then sudo apt-get install -qq qt56-meta-minimal qt56script qt56multimedia qt56serialport; export QMAKE=/opt/qt56/bin/qmake; fi
+ - if [ "$TASK" = "coverage" ]; then sudo apt-get install -qq lcov; gem install coveralls-lcov; fi
 #Report the qmake version
  - $QMAKE -v
  # Start xvfb so tests don't fail
@@ -38,3 +39,6 @@ before_install:
  - if [ "$QT" = "qt5" ] && [ "$CXX" = "g++-5" ]; then sudo rm /usr/bin/g++; sudo rm /usr/bin/gcc; fi
 #Report the compiler version
  - $CXX --version
+
+after_success:
+ - if [ "$TASK" = "coverage" ]; coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage/coverage.info; fi
