--- a/.travis.yml
+++ b/.travis.yml
@@ -75,14 +75,9 @@ before_install:
  - if [ "$QT" = "qt5" ] && [ "$CXX" = "g++" ]; then sudo rm /usr/bin/g++; sudo rm /usr/bin/gcc; export CXX="g++-5" CC="gcc-5"; fi
 #Report the compiler version
  - $CXX --version
- # Start xvfb so tests don't fail
+ # Start xvfb so UI tests don't fail
  - "export DISPLAY=:99.0"
  - "sh -e /etc/init.d/xvfb start"
 
-#install:
-# - if [ "$TASK" = "coverage" ]; then pip install --user cpp-coveralls; fi
-
 after_success:
  - if [ "$TASK" = "coverage" ]; then coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage/coverage.info; fi
-# - if [ "$TASK" = "coverage" ]; then coveralls --gcov /usr/bin/gcov-6 -b . -E '.*/engine/src/.cpp$' -E '.*/ui/src/.cpp$' --gcov-options '\-lp' > /dev/null; fi
-# - if [ "$TASK" = "coverage" ]; then coveralls; fi
