--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,8 +49,8 @@ build_script:
           make install -s
           cp *.qm /c/qlcplus
           cd /c/qlcplus
-          sed -i -e 's/Qt/projects/g' qlcplusQt5.nsi
-          makensis -X'SetCompressor /FINAL lzma' qlcplusQt5.nsi
+          sed -i -e 's/Qt/projects/g' qlcplus4Qt5.nsi
+          makensis -X'SetCompressor /FINAL lzma' qlcplus4Qt5.nsi
           #set CURRDATE=`date +%Y%m%d`
           mv QLC+_*.exe /c/projects/qlcplus/QLC+_$APPVEYOR_BUILD_VERSION.exe
           ls /c/projects/qlcplus/*.exe
