--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,14 +16,16 @@ install:
     #- pacman --noconfirm --needed -S pacman-mirrors
     #- pacman --noconfirm -Sy
     - pacman --noconfirm --needed -S unzip mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-nsis
-    - wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz -P /c/projects
-    - wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz -P /c/projects
-    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.6.2-4-any.pkg.tar.xz -P /c/projects
-    - pacman --noconfirm -Rdd mingw-w64-i686-gcc
-    - pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.6.2-4-any.pkg.tar.xz
+    #- wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz -P /c/projects
+    #- wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz -P /c/projects
+    #- wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.6.2-4-any.pkg.tar.xz -P /c/projects
+    #- pacman --noconfirm -Rdd mingw-w64-i686-gcc
+    #- pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
+    #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz
+    #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz
+    #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.6.2-4-any.pkg.tar.xz
+    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.9.2-1-any.pkg.tar.xz -P /c/projects
+    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.9.2-1-any.pkg.tar.xz
 
 build_script:
     - ps: >-
