--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,8 +24,8 @@ install:
     #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz
     #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz
     #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.6.2-4-any.pkg.tar.xz
-    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.9.2-1-any.pkg.tar.xz -P /c/projects
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.9.2-1-any.pkg.tar.xz
+    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.14.2-2-any.pkg.tar.zst -P /c/projects
+    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.14.2-2-any.pkg.tar.zst
 
 build_script:
     - ps: >-
