--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ configuration:
   - Release
 
 install:
-    #- pacman --noconfirm -Sy
-    #- pacman --noconfirm --needed -S pacman-mirrors
-    #- pacman --noconfirm -Sy
+    - pacman --noconfirm -Sy
+    - pacman --noconfirm --needed -S pacman-mirrors
+    - pacman --noconfirm -Sy
     - pacman --noconfirm --needed -S unzip mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-nsis
     #- wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-libs-7.4.0-1-any.pkg.tar.xz -P /c/projects
     #- wget http://www.qlcplus.org/misc/mingw-w64-i686-gcc-7.4.0-1-any.pkg.tar.xz -P /c/projects
