--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,13 +12,13 @@ configuration:
   - Release
 
 install:
-    - wget http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz -P /c/projects
-    - wget http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig  -P /c/projects
+    #- wget http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz -P /c/projects
+    #- wget http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig  -P /c/projects
     #- pacman-key --verify /c/projects/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
-    - pacman --noconfirm --needed -U /c/projects/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
-    - pacman --noconfirm -Sy
-    - pacman --noconfirm --needed -S pacman-mirrors
-    - pacman --noconfirm -Sy
+    #- pacman --noconfirm --needed -U /c/projects/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
+    #- pacman --noconfirm -Sy
+    #- pacman --noconfirm --needed -S pacman-mirrors
+    - pacman --noconfirm -Syu
     - pacman --noconfirm --needed -S unzip mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-nsis
     #- wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-9.3.0-2-any.pkg.tar.xz -P /c/projects
     #- wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-9.3.0-2-any.pkg.tar.xz -P /c/projects
