--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: cpp
 sudo: required
 
-script:
- - "bash -ex .travis-ci.sh"
+script: .travis-ci.sh
 
 addons:
   apt:
@@ -38,7 +37,6 @@ addons:
       - qt514svg
       - qt514multimedia
       - qt514serialport
-      - g++-7
 
 matrix:
   fast_finish: true
@@ -81,20 +79,7 @@ matrix:
 cache:
   apt: true
 
-before_install:
- - if [ "$QT" = "qt5" ]; then export QMAKE=/opt/qt56/bin/qmake; fi
- - if [ "$QT" = "qt5qml" ]; then export QMAKE=/opt/qt514/bin/qmake; fi
- - if [ "$TASK" = "coverage" ]; then gem install coveralls-lcov; fi
-#Report the qmake version
- - $QMAKE -v
-#Remove the old g++/gcc to ensure we're using the latest ones
- - if [ "$CXX" = "g++" ]; then sudo rm /usr/bin/gcc; sudo ln -s /usr/bin/gcc-7 /usr/bin/gcc; fi
- - if [ "$CXX" = "g++" ]; then sudo rm /usr/bin/g++; sudo ln -s /usr/bin/g++-7 /usr/bin/g++; export CXX="g++-7" CC="gcc-7"; fi
-#Report the compiler version
- - $CXX --version
- # Start xvfb so UI tests don't fail
- - "export DISPLAY=:99.0"
- - "sh -e /etc/init.d/xvfb start"
+before_script: .travis-prepare.sh
 
 after_success:
  - if [ "$TASK" = "coverage" ]; then coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage/coverage.info; fi
