--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
       - *base_pkg
       - libpulse-dev
       - xvfb
+      - libgl1-mesa-dev
       - qt514-meta-minimal
       - qt514declarative
       - qt514quickcontrols2
