Enable the xvfb service on the qmlui build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ matrix:
       dist: bionic
       compiler: gcc
       env: TASK='compile' QT='qt5qml'
+      services: xvfb
       addons:
         apt:
           sources:
