--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,8 @@
 override_dh_auto_configure:
 	./translate.sh
 	dh_auto_configure --
+	# Use this to build QLC+ v5 with the QML UI:
+	#dh_auto_configure -- CONFIG+=qmlui
 
 override_dh_shlibdeps:
 	dh_shlibdeps -Xlibmadplugin.so -Xlibsndfileplugin.so -Xlibolaio.so
