--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
       - gdb
       - libasound2-dev
       - libusb-1.0-0-dev
-      - libftdi-dev
+      - libftdi1-dev
       - shared-mime-info
       - libudev-dev
       - libmad0-dev
