--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,14 +18,14 @@ install:
     #- pacman --noconfirm --needed -S pacman-mirrors
     - pacman --noconfirm -Syu
     - pacman --noconfirm --needed -S unzip mingw32/mingw-w64-i686-libmad mingw32/mingw-w64-i686-libsndfile mingw32/mingw-w64-i686-flac mingw32/mingw-w64-i686-fftw mingw32/mingw-w64-i686-libusb mingw32/mingw-w64-i686-nsis
-    - wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-10.3.0-8-any.pkg.tar.zst -P /c/projects
-    - wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-10.3.0-8-any.pkg.tar.zst -P /c/projects
-    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.14.2-3-any.pkg.tar.zst -P /c/projects
+    #- wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-libs-10.3.0-8-any.pkg.tar.zst -P /c/projects
+    #- wget http://repo.msys2.org/mingw/i686/mingw-w64-i686-gcc-10.3.0-8-any.pkg.tar.zst -P /c/projects
+    - wget http://www.qlcplus.org/misc/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst -P /c/projects
     - pacman --noconfirm -Rdd mingw-w64-i686-gcc
     - pacman --noconfirm -Rdd mingw-w64-i686-gcc-libs
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-10.3.0-8-any.pkg.tar.zst
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-10.3.0-8-any.pkg.tar.zst
-    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.14.2-3-any.pkg.tar.zst
+    #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-libs-10.3.0-8-any.pkg.tar.zst
+    #- pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-gcc-10.3.0-8-any.pkg.tar.zst
+    - pacman --noconfirm --needed -U /c/projects/mingw-w64-i686-qt5-5.15.2-7-any.pkg.tar.zst
 
 build_script:
     - ps: >-
