--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # Qt-es
 
 .qmake.stash
+.qtc_clangd
 *.pro.user
 *.pro.user.*
 moc_*.cpp
@@ -44,8 +45,6 @@ core
 coverage/
 *.gcda
 *.gcno
-
-
 
 # Development IDEs
 .vscode/
