--- a/debian/control
+++ b/debian/control
@@ -7,13 +7,13 @@ Build-Depends:
  g++,
  libasound2-dev (>= 1.0.16),
  libfftw3-dev,
- libftdi-dev (>= 0.17),
+ libftdi1-dev (>= 0.17),
  libmad0-dev,
  qtbase5-dev, qtscript5-dev, qtmultimedia5-dev,
  libsndfile1-dev,
  libstdc++-dev,
  libudev-dev,
- libusb-dev (>= 2:0.1.12),
+ libusb-1.0-0-dev (>= 2:0.1.12),
  make,
  pkg-config,
  libxml2-utils,
