For bionic, this is still python, not python3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
       # Needed for `xmllint`
       - libxml2-utils
       # needed for fixtures-tool.xml
-      - python3-lxml
+      - python-lxml
     packages: &qt5_pkg
       - *base_pkg
       - qt514-meta-minimal
